...
                ? () {
                    ref
                        .read(hostSessionStateNotifierProvider.notifier)
                        .startSession();
                  }
                : null,
            text: 'Start Game',
            isDisabled: playerCount == 0,
            width: double.infinity,
          ),
          const SizedBox(height: AppSpacing.spacingM),
          TextButton(
            onPressed: () {
...
                ),
              ],
            ),
            child: Column(
              children: [
                Text(
                  'Game PIN',
                  style: AppTextStyles.caption.copyWith(
                    color: AppColors.coolGray,
                  ),
                ),
                const SizedBox(height: AppSpacing.spacingXS),
                Text(
...
